# wasm-game-of-life

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
.github/workflows/: deploy.yml
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
